register and login

--- a/app/src/views/user/login.ejs
+++ b/app/src/views/user/login.ejs
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>로그인</title>
+    <script src="/js/user/login.js" defer></script>
 </head>
 <body>
-    로그인 페이지
+    <form>
+        <input id="id" type="text" placeholder="아이디"/>
+        <input id="psword" type="password" placeholder="비밀번호"/>
+        <Button type="button" id="btn-login">로그인</Button>
+    </form>
 </body>
 </html>
