--- a/app/src/views/user/register.ejs
+++ b/app/src/views/user/register.ejs
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>회원가입</title>
+    <script src="/js/user/register.js" defer></script>
 </head>
 <body>
-    회원가입 페이지
+    <form>
+        <input id="id" type="text" placeholder="아이디"/>
+        <input id="psword" type="password" placeholder="비밀번호"/>
+        <input id="confirm-psword" type="password" placeholder="비밀번호 확인"/>
+        <input id="name" type="text" placeholder="이름"/>            
+        <input id="email" type="email" placeholder="이메일"/>
+        <button id="btn-join" type="button">가입하기</button>
+    </form>
 </body>
 </html>
